--- a/panda_simulation/package.xml
+++ b/panda_simulation/package.xml
@@ -63,15 +63,23 @@
   <build_depend>moveit_ros_control_interface</build_depend>
   <build_depend>moveit_simple_controller_manager</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>moveit_visual_tools</build_depend>
+  <build_depend>moveit_ros_planning_interface</build_depend>
+  <build_depend>interactive_markers</build_depend>
+  <build_depend>tf2_geometry_msgs</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
-
+  
   <exec_depend>roscpp</exec_depend>
   <exec_depend>moveit_core</exec_depend>
   <exec_depend>moveit_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>tf</exec_depend>
+  <exec_depend>moveit_visual_tools</exec_depend>
+  <exec_depend>moveit_ros_planning_interface</exec_depend>
+  <exec_depend>interactive_markers</exec_depend>
+  <exec_depend>tf2_geometry_msgs</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
